--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "node-sass": "~4.7.2",
     "postcss-loader": "~2.1.0",
     "postcss-safe-parser": "~3.0",
+    "postcss-uncss": "^0.16.1",
     "resolve-url-loader": "~2.2.1",
     "rimraf": "~2.6",
     "sass-loader": "~6.0",
@@ -94,6 +95,7 @@
     "stylelint": "^8.4.0",
     "stylelint-config-standard": "~18.0.0",
     "stylelint-webpack-plugin": "^0.10.1",
+    "uncss": "^0.16.2",
     "url-loader": "^0.6.2",
     "webpack": "~3.10.0",
     "webpack-assets-manifest": "^1.0.0",
