--- a/package.json
+++ b/package.json
@@ -105,6 +105,10 @@
     "yargs": "~11.0.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.4",
+    "@fortawesome/fontawesome-free-brands": "^5.0.8",
+    "@fortawesome/fontawesome-free-regular": "^5.0.8",
+    "@fortawesome/fontawesome-free-solid": "^5.0.8",
     "bootstrap": "v4.0.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.12.9"
