--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
     "illuminate/support": "5.4.*",
     "roots/sage-lib": "~9.0.0-beta.4",
     "soberwp/controller": "~9.0.0-beta.4",
-    "h-enk/json-sitemap": "^1.0"
+    "h-enk/json-sitemap": "^1.0",
+    "mwdelaney/sage-bootstrap4-navwalker": "^1.1"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^2.8.0",
