--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "@fortawesome/fontawesome-free-solid": "^5.0.8",
     "bootstrap": "v4.1.0",
     "jquery": "^3.3.1",
+    "lazysizes": "^4.0.2",
     "popper.js": "^1.14.3"
   }
 }
