Add lazysizes script

--- a/resources/assets/config.json
+++ b/resources/assets/config.json
@@ -6,6 +6,9 @@
     ],
     "customizer": [
       "./scripts/customizer.js"
+    ],
+    "lazysizes": [
+      "./scripts/lazysizes.js"
     ]
   },
   "publicPath": "/app/themes/sage",
