--- a/composer.json
+++ b/composer.json
@@ -35,9 +35,9 @@
     "php": ">=7.1",
     "composer/installers": "~1.0",
     "illuminate/support": "~5.6",
-    "mwdelaney/sage-bootstrap4-navwalker": "^1.1",
     "roots/sage-lib": "~9.0.1",
-    "soberwp/controller": "~9.0.0-beta.4"
+    "soberwp/controller": "~9.0.0-beta.4",
+    "mwdelaney/sage-bootstrap4-navwalker": "^1.2"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^2.8.0",
