--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
   },
   "scripts": {
     "build": "webpack --progress --config resources/assets/build/webpack.config.js",
-    "build:production": "webpack --progress -p --config resources/assets/build/webpack.config.js",
+    "build:production": "webpack --env.production --progress --config resources/assets/build/webpack.config.js",
     "build:profile": "webpack --progress --profile --json --config resources/assets/build/webpack.config.js",
     "start": "webpack --hide-modules --watch --config resources/assets/build/webpack.config.js",
     "rmdist": "rimraf dist",
@@ -81,6 +81,7 @@
     "extract-text-webpack-plugin": "~3.0.2",
     "file-loader": "^1.1.6",
     "friendly-errors-webpack-plugin": "^1.6.1",
+    "glob-all": "^3.1.0",
     "imagemin-mozjpeg": "~7.0.0",
     "imagemin-webpack-plugin": "~2.1.1",
     "import-glob": "~1.5",
@@ -88,6 +89,7 @@
     "postcss-loader": "~2.1.0",
     "postcss-safe-parser": "~3.0",
     "postcss-uncss": "^0.16.1",
+    "purgecss-webpack-plugin": "0.23.0",
     "resolve-url-loader": "~2.3.0",
     "rimraf": "~2.6",
     "sass-loader": "~6.0",
@@ -95,7 +97,7 @@
     "stylelint": "^8.4.0",
     "stylelint-config-standard": "~18.2.0",
     "stylelint-webpack-plugin": "^0.10.1",
-    "uncss": "^0.16.2",
+    "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "^0.6.2",
     "webpack": "~3.10.0",
     "webpack-assets-manifest": "^1.0.0",
@@ -110,6 +112,7 @@
     "@fortawesome/fontawesome-free-regular": "^5.0.8",
     "@fortawesome/fontawesome-free-solid": "^5.0.8",
     "bootstrap": "v4.1.1",
+    "hamburgers": "^0.9.3",
     "jquery": "^3.3.1",
     "lazysizes": "^4.0.2",
     "popper.js": "^1.14.3"
