--- a/resources/assets/config.json
+++ b/resources/assets/config.json
@@ -11,7 +11,7 @@
       "./scripts/lazysizes.js"
     ]
   },
-  "publicPath": "/app/themes/sage",
+  "publicPath": "/wp-content/themes/sage",
   "devUrl": "http://example.test",
   "proxyUrl": "http://localhost:3000",
   "cacheBusting": "[name]_[hash:8]",
