--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
   },
   "dependencies": {
     "bootstrap": "v4.3.1",
+    "rfs": "^8.0.4",
     "popper.js": "^1.14.7",
     "jquery": "^3.3.1",
     "hamburgers": "^1.1.3",
